[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/backgrounds/bedroom.png" type="Texture" id=1]
[ext_resource path="res://src/Bedroom/Bedroom.gd" type="Script" id=2]
[ext_resource path="res://src/transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Audio/BGM/Chilly_wind.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65, 50.5 )

[node name="Bedroom" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 515, 303.75 )
scale = Vector2( 1.155, 0.903 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lemari" type="Area2D" parent="."]
position = Vector2( 300, 275 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lemari"]
position = Vector2( 36, -4.5 )
shape = SubResource( 1 )

[node name="transition" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="input_event" from="Lemari" to="." method="_on_Lemari_input_event"]
[connection signal="mouse_entered" from="Lemari" to="." method="_on_Lemari_entered"]
[connection signal="mouse_exited" from="Lemari" to="." method="_on_Lemari_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
